# violinplot

./: .gitattibutes  MANIFEST.in  README.md  analisis_Datos.py  dataframe.csv  dataframe_norm (2).csv  dataframe_prep.csv  datasets.py  requirements-install.txt  setup.cfg  setup.py  test_graphics_channels_powers.py  test_graphics_componentsPowers.py  test_graphics_components_powers.py  test_graphics_powers.py  test_graphics_prep.py  test_graphics_reject.py  test_graphics_wica.py  test_html.py  test_norm.py  test_rois.py  versioneer.py
Dataframes/: longitudinal_data_icpowers_long.xlsx
Graphics/: FunctionsGraphics.py  GetDataframes.py  functionsImages.py  functions_postprocessing.py  functions_postprocessing_channels.py  functions_postprocessing_components.py  functions_stage_prep.py  functions_stage_reject.py  graphicsViolin.py
sovaViolin/: GetDataframes.py  __init__.py  comparaciones.py  data_feather.py  functionsImages.py  functions_connectivity.py  functions_dataframes.py  functions_postprocessing_channels.py  functions_postprocessing_components.py  functions_rois.py  functions_stage_prep.py  functions_stage_reject.py  functions_stage_wica.py
sovaViolin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
