[metadata]
name = sovaViolin
url = https://github.com/GRUNECO/violinplot
author = sovaViolin developers
maintainer = Luisa Zapata
maintainer_email = luiszapatasaldarriaga@gmail.com
description = sovaViolin , a module of graphics of each stage eeg pipeline 
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
keywords = violinplot of pipeline 
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Programming Language :: Python :: 3
  Intended Audience :: Science/Research
  Development Status :: 3 - Alpha
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
project_urls =
  Source = https://github.com/GRUNECO/violinplot

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True

[options.packages.find]
# exclude =
#   misc

[versioneer]
VCS = git
style = pep440
versionfile_source = sovaViolin/_version.py
versionfile_build = sovaViolin/_version.py
tag_prefix = 
parentdir_prefix = 

